Test rework Boat sans TDD

--- a/WebApplication1/Pages/Map.cshtml
+++ b/WebApplication1/Pages/Map.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/Maps"
 @using BackEnd;
-@using BackEnd.Enum;
+@using BackEnd.Enums;
 @model WebApplication.Pages.Shared.MapModel
 @{
     Map m = new Map(8);
